Changed the structure of acceptanceTest folder.